--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf dist",
+    "lint": "eslint src/index.js",
+    "test": "eslint src/index.js && jest --passWithNoTests",
     "build": "ncc build src/index.js -o dist",
     "vendor-deps": "pip download -r src/ciff/requirements.txt --no-binary=:all: -d dist/vendor",
     "package": "npm run build && npm run vendor-deps"
@@ -21,12 +23,14 @@
   },
   "homepage": "https://github.com/peter-evans/create-issue-from-file",
   "dependencies": {
-    "@actions/core": "^1.1.1",
-    "@actions/exec": "^1.0.1",
-    "@actions/tool-cache": "^1.1.2",
-    "is-docker": "^2.0.0"
+    "@actions/core": "1.2.0",
+    "@actions/exec": "1.0.2",
+    "@actions/tool-cache": "1.1.2",
+    "is-docker": "2.0.0"
   },
   "devDependencies": {
-    "@zeit/ncc": "0.22.1"
+    "@zeit/ncc": "0.22.1",
+    "eslint": "6.8.0",
+    "jest": "25.5.4"
   }
 }
