--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,10 @@ jobs:
         with:
           name: dist
           path: dist
+      - uses: actions/upload-artifact@v2
+        with:
+          name: action.yml
+          path: action.yml
 
   test:
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository
@@ -44,6 +48,11 @@ jobs:
         with:
           name: dist
           path: dist
+      - if: matrix.target == 'built' || github.event_name == 'pull_request'
+        uses: actions/download-artifact@v2
+        with:
+          name: action.yml
+          path: .
 
       - name: Test create issue from file
         id: ciff
