--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "is-docker": "2.1.1"
   },
   "devDependencies": {
-    "@zeit/ncc": "0.22.3",
+    "@vercel/ncc": "0.23.0",
     "eslint": "7.7.0",
     "jest": "26.4.0"
   }
