--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "create-issue-from-file",
-  "version": "2.0.0",
+  "version": "3.0.0",
+  "private": true,
   "description": "An action to create an issue using content from a file",
-  "main": "index.js",
+  "main": "lib/main.js",
   "scripts": {
-    "clean": "rm -rf dist",
-    "lint": "eslint src/index.js",
-    "test": "eslint src/index.js && jest --passWithNoTests",
-    "build": "ncc build src/index.js -o dist",
-    "vendor-deps": "pip download -r src/ciff/requirements.txt --no-binary=:all: -d dist/vendor",
-    "package": "npm run build && npm run vendor-deps"
+    "build": "tsc && ncc build",
+    "format": "prettier --write '**/*.ts'",
+    "format-check": "prettier --check '**/*.ts'",
+    "lint": "eslint src/**/*.ts",
+    "test": "jest --passWithNoTests"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/peter-evans/create-issue-from-file.git"
   },
-  "keywords": [],
+  "keywords": [
+    "actions",
+    "create",
+    "issue"
+  ],
   "author": "Peter Evans",
   "license": "MIT",
   "bugs": {
@@ -24,13 +28,21 @@
   "homepage": "https://github.com/peter-evans/create-issue-from-file",
   "dependencies": {
     "@actions/core": "1.2.6",
-    "@actions/exec": "1.0.4",
-    "@actions/tool-cache": "1.6.1",
-    "is-docker": "2.1.1"
+    "@actions/github": "4.0.0"
   },
   "devDependencies": {
+    "@types/jest": "26.0.20",
+    "@types/node": "14.14.33",
+    "@typescript-eslint/parser": "4.17.0",
     "@vercel/ncc": "0.27.0",
-    "eslint": "7.23.0",
-    "jest": "26.6.3"
+    "eslint": "7.21.0",
+    "eslint-plugin-github": "4.1.2",
+    "eslint-plugin-jest": "24.2.1",
+    "jest": "26.6.3",
+    "jest-circus": "26.6.3",
+    "js-yaml": "4.0.0",
+    "prettier": "2.2.1",
+    "ts-jest": "26.5.3",
+    "typescript": "4.2.3"
   }
 }
