--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,15 +3,19 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "monthly"
+      interval: "weekly"
+      day: "friday"
     labels:
       - "dependencies"
 
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "monthly"
-    allow:
-      - dependency-type: "production"
+      interval: "weekly"
+      day: "friday"
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-major"]
     labels:
       - "dependencies"
+ 
